--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family:  sans-serif; 
+  background-color: blueviolet ;
+  color:white;
+}
+.container {
+  width: 60%;
+  margin: 10% auto;
+}
+.text-center{
+  text-align: center;
+}
+
+.listItem{
+  background-color: white;
+  color: blueviolet;
+}
+ 
+.listItem p {
+  color: blueviolet;
+  text-align: center;
+  padding: 10px 0;
+  margin: 0;
+}
+.listItem span{
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0 ;
+  font-size: 19px;
+  border: .3px solid #ccc;
+}
+.listItem span.title{
+  background-color: blueviolet;
+  color: white;
+  box-shadow: black;
+}
+
+.listItem span.name,
+form input[type=text] {
+  width: 60%;
+}
+
+.listItem span.age,
+form input[type=number] {
+  width: 25%;
+}
+
+.listItem span.action,
+form input[type=submit] {
+  width: 15%;
+}
+.listItem span.icon{
+  cursor: pointer;
+}
+form input{
+  background-color: white;
+   padding: 10px;
+   border:.3px solid #ccc;
+}
+form input[type=submit]{
+  cursor: pointer;
+  background-color: blueviolet;
+  color: white;
 }
